# wikid_wasm

./: Cargo.toml  readme.md
src/: applet.rs  lib.rs  style.rs  tests.rs  util.rs
src/element/: button.rs  dynamic_plot.rs  mod.rs  slider.rs
